@@ -4,7 +4,9 @@ DOC_DIR=../../../box/doc
 OUT_DOC_DIR=../../out/documentation
 
 all:
-	(cd $(DOC_DIR) && make)
+	(cd $(DOC_DIR) && make html inst-html)
 	mkdir -p $(OUT_DOC_DIR)
+	cp $(DOC_DIR)/inst-html/* $(OUT_DOC_DIR)
 	cp $(DOC_DIR)/html/* $(OUT_DOC_DIR)
+
 
