@@ -11,5 +11,6 @@ restindex
 The documentation of Box is being currently written.
 Here are the available 
 
+* `Notes to help you install Box on your computer <installation.html>`__
 * `The still incomplete manual for the Box graphic library <manual.html>`__
 
