@@ -74,6 +74,18 @@
 </div>
 
 </div>
+
+<!-- BEGIN: Google analytics stuff -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-4971616-2");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+<!-- END: Google analytics stuff -->
 </body>
 </html>
 
